--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 name: 俊司达也的博客
 email: 285956861@qq.com
-author: M/J
+author: 俊司达也
 url: http://www.wangjinfeng.cn
 resume_site: http://xiaokedada.com/me/
 github: https://wangjinfeng-junsidaye.github.io
 baseurl: ""  #根目录
-description: 假如生活欺骗了你，不要悲伤，不要哭泣。
+description: Write the code,Change the world
 motto: 我们笑着说再见，却深知再见遥遥无期。
 #motto: 如果生活欺骗了你，不要悲伤，不要哭泣。
 banner: 我想带你去看绚丽的山峦，去看秀丽的溪谷，这份心情，人类是如何称呼的呢。
